We're gonna rough it up before we take it slow Girl, let me rock you, rock you like a rodeo (It's gonna be a bumpy ride)
